# PyFiles

./: .env.example  .gitignore  bizdays.py  datetime.ipynb  goog_challenge_III.ipynb  google-1.py  operacoes_ls_data.xlsx  pyproject.toml
_notebooks/: lsCoint.nb.html  python_setup_R.Rmd  python_setup_R.nb.html
_notebooks/Operações Long-Short Cointegração R_files/: pixel.html  sdk.js.download  sync.html
cointegration_tests/: Cointegration Tests - ADF and Johansen.Rmd  Cointegration Tests - ADF and Johansen.nb.html  Operações Long-Short Cointegração R.html  Sqlite.nb.html  lsCoint.Rmd  notebook.Rmd  operacoes_ls_cointegracao.rmd
cointegration_tests/Operações Long-Short Cointegração R_files/: embed.js.download  main.css  main.js.download  saved_resource(2).html  saved_resource.html
cointegration_tests/files/: exemplos-cointegracao-qual3_rent32.xlsx
config/: db_connections.py
scripts/: Winpython_checker.ipynb  bayesian_neural_network.ipynb  ccxt.ipynb  estatsite_linear-regression.ipynb  femi.ipynb  goog_challenge_I.ipynb  goog_challenge_II.ipynb
