[project]
name = "back-testing"
version = "0.1.0"
description = "Python Notebook Back Testing Environment"
authors = [
    {name = "Anselmo Araujo",email = "anselmoaraujo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pandas-ta (>=0.3.14b0,<0.4.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
